--- a/index.html
+++ b/index.html
@@ -7,6 +7,55 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello world</h1>
+    <header id="header">
+        <div class="upper-header">
+            <div class="logo"></div>
+            <div class="booking"></div>
+        </div>
+        <nav class="nav-bar">
+            <ul class="nav-menu">
+                <li><a href="#">Apartmani</a></li>
+                <li><a href="#">Restorani</a></li>
+                <li><a href="#">Galerija</a></li>
+                <li><a href="#">Kontakt</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="section hero">
+            <img src="https://meneghetti.hr/_nuxt/assets/img/dining/heroac9e306.jpg" alt="">
+        </section>
+        <section class="section about-us">'
+            <div class="about">
+                <h1>Bonanza</h1>
+                <h2>Hotel-like apartments</h2>
+                <p>U potrazi za jedinstvenim mjestima potrebno je ponekad skrenuti s glavnog puta. No neka vas glavni putevi dovedu do Istre, do Bala. A zatim usporite i pratite cestu koja se sa svakim kilometrom sve više sužava, dok vam se priroda sve više približava. Usporite još i više te skrenite na bijelu cestu na kraju koje se pred vama otvaraju velika željezna vrata. Stigli ste na Meneghetti. Zatim zastanite bar na trenutak – i uvjerite se da se najbolja mjesta nalaze na sporednim putevima.</p>
+            </div>
+            <div class="mini-gallery">
+                <img src="https://meneghetti.hr/_nuxt/assets/img/masonry113d415a.jpg" alt="">
+            </div>
+        </section>
+        <section class="section gallery">
+            <h1>PRIRODA SUSREĆE LUKSUZ</h1>
+            <h2>ELEGANCIJA DO ZADNJEG DETALJA</h2>
+            <div class="gallery-holder">
+                <div class="image"><img src="images/image1.jpg" alt="alternative"></div>
+                <div class="image"><img src="images/image2.jpg" alt=""></div>
+                <div class="image"><img src="images/image3.jpg" alt=""></div>
+                <div class="image"><img src="images/image4.jpg" alt=""></div>
+                <div class="image"><img src="images/image5.jpg" alt=""></div>
+            </div>
+        </section>
+        <section class="section apartments">
+            
+        </section>
+    </main>
+    <footer>
+        <div class="footer-top">
+            <div class="footer-top-left"></div>
+            <div class="footer-top-right"></div>
+        </div>
+        <div class="footer-down"></div>
+    </footer>
 </body>
 </html>
