--- a/index.html
+++ b/index.html
@@ -47,12 +47,59 @@
             </div>
         </section>
         <section class="section apartments">
-            
+            <h1>Apartmani</h1>
+            <h2>UDOBNOST DIZAJNIRANA ZA BEZBRIŽAN ODMOR</h2>
+            <div class="apartments-container">
+                <div class="apartments-container-item">
+                    <a href="#" class="apartment-image">
+                        <img src="images/apartment1.png" alt="">
+                        <div class="apartment-content-overlay">
+                            <p class="apartment-title"></p>
+                            <div class="aparment-content-overlay-hidden">
+                                <p>Za opušten odmor vaše velike obitelji</p>
+                                <p>Pogledaj</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="apartments-container-item">
+                    <a href="#" class="apartment-image">
+                        <img src="images/apartment1.png" alt="">
+                        <div class="apartment-content-overlay">
+                            <p class="apartment-title"></p>
+                            <div class="aparment-content-overlay-hidden">
+                                <p>Za opušten odmor vaše velike obitelji</p>
+                                <p>Pogledaj</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="apartments-container-item">
+                    <a href="#" class="apartment-image">
+                        <img src="images/apartment1.png" alt="">
+                        <div class="apartment-content-overlay">
+                            <p class="apartment-title"></p>
+                            <div class="aparment-content-overlay-hidden">
+                                <p>Za opušten odmor vaše velike obitelji</p>
+                                <p>Pogledaj</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
         <div class="footer-top">
-            <div class="footer-top-left"></div>
+            <div class="footer-top-left">
+                <p>OSTANIMO U KONTAKTU</p>
+                <p>PODIJELITE SVOJE MENEGHETTI ISKUSTVO</p>
+                <div class="social-networks">
+                    <a href="#"></a>
+                    <a href="#"></a>
+                    <a href="#"></a>
+                </div>
+            </div>
             <div class="footer-top-right"></div>
         </div>
         <div class="footer-down"></div>
