--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bonanza | Apartments | Nis</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header id="header">
@@ -95,7 +96,7 @@
                 <p>OSTANIMO U KONTAKTU</p>
                 <p>PODIJELITE SVOJE MENEGHETTI ISKUSTVO</p>
                 <div class="social-networks">
-                    <a href="#"></a>
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="#"></a>
                     <a href="#"></a>
                 </div>
