ubacene sve ikone

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                 <p>PODIJELITE SVOJE MENEGHETTI ISKUSTVO</p>
                 <div class="social-networks">
                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
                 </div>
             </div>
             <div class="footer-top-right"></div>
