--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/dbad9f8d2b.js" defer crossorigin="anonymous"></script>
     <title>Bonanza | Apartments | Nis</title>
 </head>
@@ -16,7 +15,7 @@
         </div>
         <nav class="nav-bar">
             <ul class="nav-menu">
-                <li><a href="#">Apartmani</a></li>
+                <li><a href="html/apartmani.html">Apartmani</a></li>
                 <li><a href="#">Restorani</a></li>
                 <li><a href="#">Galerija</a></li>
                 <li><a href="#">Kontakt</a></li>
@@ -39,7 +38,8 @@
         </section>
         <section class="section gallery">
             <h1>PRIRODA SUSREĆE LUKSUZ</h1>
-            <h2>ELEGANCIJA DO ZADNJEG DETALJA</h2>
+            <h2>ELEGANCIJA DO ZADNJEG DETALJA</h2>`
+            <div class="section-line"></div>
             <div class="gallery-holder">
                 <div class="image"><img src="images/image1.jpg" alt="alternative"></div>
                 <div class="image"><img src="images/image2.jpg" alt=""></div>
@@ -51,6 +51,7 @@
         <section class="section apartments">
             <h1>Apartmani</h1>
             <h2>UDOBNOST DIZAJNIRANA ZA BEZBRIŽAN ODMOR</h2>
+            <div class="section-line"></div>
             <div class="apartments-container">
                 <div class="apartments-container-item">
                     <a href="#" class="apartment-image">
@@ -102,9 +103,21 @@
                     <a href="#"><i class="fa-brands fa-youtube"></i></a>
                 </div>
             </div>
-            <div class="footer-top-right"></div>
+            <div class="footer-top-right">
+                <div class="line"></div>
+                <div class="email-form">
+                    <p>PRIDRUŽITE SE KLUBU MENEGHETTI</p>
+                    <p>PRIMITE NAŠE NAJBOLJE PONUDE I UŽIVAJTE U POVLAŠTENIM CIJENAMA!</p>
+                    <form action="post" target="_blank">
+                        <input type="text" placeholder="Email">
+                        <button type="submit">Pridruzi se klubu!</button>
+                    </form>
+                </div>
+            </div>
         </div>
-        <div class="footer-down"></div>
+        <div class="footer-down">
+            <p>Sva prava zadrzana </p>
+        </div>
     </footer>
 </body>
 </html>
