--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <main>
         <section class="section hero">
-            <img src="https://meneghetti.hr/_nuxt/assets/img/dining/heroac9e306.jpg" alt="">
+            <img style="height: 500px; width: 300px;" src="https://meneghetti.hr/_nuxt/assets/img/dining/heroac9e306.jpg" alt="">
         </section>
         <section class="section about-us">'
             <div class="about">
@@ -41,11 +41,11 @@
             <h2>ELEGANCIJA DO ZADNJEG DETALJA</h2>`
             <div class="section-line"></div>
             <div class="gallery-holder">
-                <div class="image"><img src="images/image1.jpg" alt="alternative"></div>
-                <div class="image"><img src="images/image2.jpg" alt=""></div>
-                <div class="image"><img src="images/image3.jpg" alt=""></div>
-                <div class="image"><img src="images/image4.jpg" alt=""></div>
-                <div class="image"><img src="images/image5.jpg" alt=""></div>
+                <div class="image"><img style="height: 500px; width: 300px;" src="images/image1.jpg" alt="alternative"></div>
+                <div class="image"><img style="height: 500px; width: 300px;" src="images/image2.jpg" alt=""></div>
+                <div class="image"><img style="height: 500px; width: 300px;" src="images/image3.jpg" alt=""></div>
+                <div class="image"><img style="height: 500px; width: 300px;" src="images/image4.jpg" alt=""></div>
+                <div class="image"><img style="height: 500px; width: 300px;" src="images/image5.jpg" alt=""></div>
             </div>
         </section>
         <section class="section apartments">
@@ -55,7 +55,7 @@
             <div class="apartments-container">
                 <div class="apartments-container-item">
                     <a href="#" class="apartment-image">
-                        <img src="images/apartment1.png" alt="">
+                        <img style="height: 500px; width: 300px;" src="images/apartment1.png" alt="">
                         <div class="apartment-content-overlay">
                             <p class="apartment-title"></p>
                             <div class="aparment-content-overlay-hidden">
@@ -67,7 +67,7 @@
                 </div>
                 <div class="apartments-container-item">
                     <a href="#" class="apartment-image">
-                        <img src="images/apartment1.png" alt="">
+                        <img style="height: 500px; width: 300px;" src="images/apartment1.png" alt="">
                         <div class="apartment-content-overlay">
                             <p class="apartment-title"></p>
                             <div class="aparment-content-overlay-hidden">
@@ -79,7 +79,7 @@
                 </div>
                 <div class="apartments-container-item">
                     <a href="#" class="apartment-image">
-                        <img src="images/apartment1.png" alt="">
+                        <img style="height: 500px; width: 300px;" src="images/apartment1.png" alt="">
                         <div class="apartment-content-overlay">
                             <p class="apartment-title"></p>
                             <div class="aparment-content-overlay-hidden">
@@ -92,32 +92,32 @@
             </div>
         </section>
     </main>
-    <footer>
-        <div class="footer-top">
-            <div class="footer-top-left">
-                <p>OSTANIMO U KONTAKTU</p>
-                <p>PODIJELITE SVOJE MENEGHETTI ISKUSTVO</p>
-                <div class="social-networks">
-                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+        <footer>
+            <div class="footer-top">
+                <div class="footer-top-left">
+                    <p>OSTANIMO U KONTAKTU</p>
+                    <p>PODIJELITE SVOJE MENEGHETTI ISKUSTVO</p>
+                    <div class="social-networks">
+                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="footer-top-right">
+                    <div class="line"></div>
+                    <div class="email-form">
+                        <p>PRIDRUŽITE SE KLUBU MENEGHETTI</p>
+                        <p>PRIMITE NAŠE NAJBOLJE PONUDE I UŽIVAJTE U POVLAŠTENIM CIJENAMA!</p>
+                        <form action="post" target="_blank">
+                            <input type="text" placeholder="Email">
+                            <button type="submit" class="btn">Pridruzi se klubu!</button>
+                        </form>
+                    </div>
                 </div>
             </div>
-            <div class="footer-top-right">
-                <div class="line"></div>
-                <div class="email-form">
-                    <p>PRIDRUŽITE SE KLUBU MENEGHETTI</p>
-                    <p>PRIMITE NAŠE NAJBOLJE PONUDE I UŽIVAJTE U POVLAŠTENIM CIJENAMA!</p>
-                    <form action="post" target="_blank">
-                        <input type="text" placeholder="Email">
-                        <button type="submit">Pridruzi se klubu!</button>
-                    </form>
-                </div>
+            <div class="footer-down">
+                <p>Sva prava zadrzana </p>
             </div>
-        </div>
-        <div class="footer-down">
-            <p>Sva prava zadrzana </p>
-        </div>
-    </footer>
+        </footer>
 </body>
 </html>
