--- a/html/apartmani.html
+++ b/html/apartmani.html
@@ -26,9 +26,10 @@
     <main>
         <section class="apartments">
             <div class="apartments-container">
+                <h1>Superior</h1>
                 <div class="apartments-container-item">
-                    <a href="#" class="apartment-image">
-                        <img src="images/apartment1.png" alt="">
+                    <a href="apartmani/superior.html" class="apartment-image">
+                        <img style="height: 500px; width: 300px;" src="../images/apartment1.png" alt="">
                         <div class="apartment-content-overlay">
                             <p class="apartment-title"></p>
                             <div class="aparment-content-overlay-hidden">
@@ -39,8 +40,9 @@
                     </a>
                 </div>
                 <div class="apartments-container-item">
-                    <a href="#" class="apartment-image">
-                        <img src="images/apartment1.png" alt="">
+                    <h1>Standard</h1>
+                    <a href="apartmani/standard.html" class="apartment-image">
+                        <img style="height: 500px; width: 300px;" src="../images/apartment1.png" alt="">
                         <div class="apartment-content-overlay">
                             <p class="apartment-title"></p>
                             <div class="aparment-content-overlay-hidden">
@@ -51,8 +53,9 @@
                     </a>
                 </div>
                 <div class="apartments-container-item">
-                    <a href="#" class="apartment-image">
-                        <img src="images/apartment1.png" alt="">
+                    <h1>Studio</h1>
+                    <a href="apartmani/studio.html" class="apartment-image">
+                        <img style="height: 500px; width: 300px;" src="../images/apartment1.png" alt="">
                         <div class="apartment-content-overlay">
                             <p class="apartment-title"></p>
                             <div class="aparment-content-overlay-hidden">
@@ -65,5 +68,32 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="footer-top">
+            <div class="footer-top-left">
+                <p>OSTANIMO U KONTAKTU</p>
+                <p>PODIJELITE SVOJE MENEGHETTI ISKUSTVO</p>
+                <div class="social-networks">
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                </div>
+            </div>
+            <div class="footer-top-right">
+                <div class="line"></div>
+                <div class="email-form">
+                    <p>PRIDRUŽITE SE KLUBU MENEGHETTI</p>
+                    <p>PRIMITE NAŠE NAJBOLJE PONUDE I UŽIVAJTE U POVLAŠTENIM CIJENAMA!</p>
+                    <form action="post" target="_blank">
+                        <input type="text" placeholder="Email">
+                        <button type="submit">Pridruzi se klubu!</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="footer-down">
+            <p>Sva prava zadrzana </p>
+        </div>
+    </footer>
 </body>
 </html>
