--- a/html/apartmani.html
+++ b/html/apartmani.html
@@ -17,9 +17,9 @@
         <nav class="nav-bar">
             <ul class="nav-menu">
                 <li><a href="#">Apartmani</a></li>
-                <li><a href="#">Restorani</a></li>
-                <li><a href="#">Galerija</a></li>
-                <li><a href="#">Kontakt</a></li>
+                <li><a href="restorani.html">Restorani</a></li>
+                <li><a href="galerija.html">Galerija</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
     </header>
