--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <main>
         <section class="section hero">
-            <img style="height: 500px; width: 300px;" src="https://meneghetti.hr/_nuxt/assets/img/dining/heroac9e306.jpg" alt="">
+            <img src="https://meneghetti.hr/_nuxt/assets/img/dining/heroac9e306.jpg" alt="">
         </section>
         <section class="section about-us">'
             <div class="about">
