--- a/html/galerija.html
+++ b/html/galerija.html
@@ -16,9 +16,9 @@
         <nav class="nav-bar">
             <ul class="nav-menu">
                 <li><a href="apartmani.html">Apartmani</a></li>
-                <li><a href="#">Restorani</a></li>
+                <li><a href="restorani.html">Restorani</a></li>
                 <li><a href="#">Galerija</a></li>
-                <li><a href="#">Kontakt</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
     </header>
