--- a/html/apartmani/studio.html
+++ b/html/apartmani/studio.html
@@ -12,14 +12,22 @@
     <header id="header">
         <div class="upper-header">
             <div class="logo"></div>
-            <div class="booking"></div>
+            <div class="booking">
+                <div class="language">
+                    <p>EN / RS</p>
+                </div>
+                <div class="booking-section">
+                    <a href="https://meneghetti.book-official-website.com/book.php?page=availability&companyid=838&hotelid=4871&checkin=2023-07-30&checkout=2023-07-31&ibelang=hr&crcid=eca91ee8cea07cd497228d2d0aadad5b" class="btn">Rezervisi</a>
+                    <p>GARANCIJA NAJBOLJE CENE</p>
+                </div>
+            </div>
         </div>
         <nav class="nav-bar">
             <ul class="nav-menu">
                 <li><a href="../apartmani.html">Apartmani</a></li>
-                <li><a href="#">Restorani</a></li>
-                <li><a href="#">Galerija</a></li>
-                <li><a href="#">Kontakt</a></li>
+                <li><a href="../restorani.html">Restorani</a></li>
+                <li><a href="../galerija.html">Galerija</a></li>
+                <li><a href="../kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
     </header>
