valjda gotova struktura

--- a/html/galerija.html
+++ b/html/galerija.html
@@ -11,7 +11,15 @@
     <header id="header">
         <div class="upper-header">
             <div class="logo"></div>
-            <div class="booking"></div>
+            <div class="booking">
+                <div class="language">
+                    <p>EN / RS</p>
+                </div>
+                <div class="booking-section">
+                    <a href="https://meneghetti.book-official-website.com/book.php?page=availability&companyid=838&hotelid=4871&checkin=2023-07-30&checkout=2023-07-31&ibelang=hr&crcid=eca91ee8cea07cd497228d2d0aadad5b" class="btn">Rezervisi</a>
+                    <p>GARANCIJA NAJBOLJE CENE</p>
+                </div>
+            </div>
         </div>
         <nav class="nav-bar">
             <ul class="nav-menu">
@@ -29,7 +37,7 @@
         <section class="section apartments">
             <div class="apartments-container">
                 <div class="apartments-container-item">
-                    <a href="#" class="apartment-image">
+                    <a href="galerija/superior.html" class="apartment-image">
                         <img style="height: 500px; width: 300px;" src="../images/apartment1.png" alt="">
                         <div class="apartment-content-overlay">
                             <p class="apartment-title"></p>
@@ -41,7 +49,7 @@
                     </a>
                 </div>
                 <div class="apartments-container-item">
-                    <a href="#" class="apartment-image">
+                    <a href="galerija/standard.html" class="apartment-image">
                         <img style="height: 500px; width: 300px;" src="../images/apartment1.png" alt="">
                         <div class="apartment-content-overlay">
                             <p class="apartment-title"></p>
@@ -53,7 +61,7 @@
                     </a>
                 </div>
                 <div class="apartments-container-item">
-                    <a href="#" class="apartment-image">
+                    <a href="galerija/studio.html" class="apartment-image">
                         <img style="height: 500px; width: 300px;" src="../images/apartment1.png" alt="">
                         <div class="apartment-content-overlay">
                             <p class="apartment-title"></p>
