--- a/html/restorani.html
+++ b/html/restorani.html
@@ -11,7 +11,15 @@
     <header id="header">
         <div class="upper-header">
             <div class="logo"></div>
-            <div class="booking"></div>
+            <div class="booking">
+                <div class="language">
+                    <p>EN / RS</p>
+                </div>
+                <div class="booking-section">
+                    <a href="https://meneghetti.book-official-website.com/book.php?page=availability&companyid=838&hotelid=4871&checkin=2023-07-30&checkout=2023-07-31&ibelang=hr&crcid=eca91ee8cea07cd497228d2d0aadad5b" class="btn">Rezervisi</a>
+                    <p>GARANCIJA NAJBOLJE CENE</p>
+                </div>
+            </div>
         </div>
         <nav class="nav-bar">
             <ul class="nav-menu">
