--- a/index.html
+++ b/index.html
@@ -3,21 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/dbad9f8d2b.js" defer crossorigin="anonymous"></script>
     <title>Bonanza | Apartments | Nis</title>
 </head>
 <body>
-    <header id="header">
+    <header>
+        <div class="header-gradient"></div>
         <div class="upper-header">
-            <div class="logo"></div>
+            <div class="logo">
+                <a href="index.html" class="logo">
+                    <img style="width: 100px; height: 70px;" src="images/logo.jpg" alt="logo">
+                </a>
+            </div>
+            <div class="logo-name">
+                <p>BONANZA</p>
+            </div>
             <div class="booking">
                 <div class="language">
-                    <p>EN / RS</p>
+                    <a href="#">EN</a>
+                    <span>/</span>
+                    <a href="#" style="color:#b99b55">RS</a>
                 </div>
                 <div class="booking-section">
                     <a href="https://meneghetti.book-official-website.com/book.php?page=availability&companyid=838&hotelid=4871&checkin=2023-07-30&checkout=2023-07-31&ibelang=hr&crcid=eca91ee8cea07cd497228d2d0aadad5b" class="btn">Rezervisi</a>
-                    <p>GARANCIJA NAJBOLJE CENE</p>
+                    <p class="best-rate">Garancija najbolje cene</p>
                 </div>
             </div>
         </div>
@@ -31,7 +41,7 @@
         </nav>
     </header>
     <main>
-        <section class="section hero">
+        <section class="hero">
             <img src="https://meneghetti.hr/_nuxt/assets/img/dining/heroac9e306.jpg" alt="">
         </section>
         <section class="section about-us">'
