--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="#" style="color:#b99b55">RS</a>
                 </div>
                 <div class="booking-section">
-                    <a href="https://meneghetti.book-official-website.com/book.php?page=availability&companyid=838&hotelid=4871&checkin=2023-07-30&checkout=2023-07-31&ibelang=hr&crcid=eca91ee8cea07cd497228d2d0aadad5b" class="btn">Rezervisi</a>
+                    <a href="https://meneghetti.book-official-website.com/book.php?page=availability&companyid=838&hotelid=4871&checkin=2023-07-30&checkout=2023-07-31&ibelang=hr&crcid=eca91ee8cea07cd497228d2d0aadad5b" class="btn">Rezerviši</a>
                     <p class="best-rate">Garancija najbolje cene</p>
                 </div>
             </div>
@@ -34,9 +34,9 @@
         <nav class="nav-bar">
             <ul class="nav-menu">
                 <li><a href="html/apartmani.html">Apartmani</a></li>
-                <li><a href="#">Restorani</a></li>
-                <li><a href="#">Galerija</a></li>
-                <li><a href="#">Kontakt</a></li>
+                <li><a href="html/restorani.html">Restorani</a></li>
+                <li><a href="html/galerija.html">Galerija</a></li>
+                <li><a href="html/kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
     </header>
