--- a/html/kontakt.html
+++ b/html/kontakt.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/apartmani.css">
+    <link rel="stylesheet" href="../style.css">
     <script src="https://kit.fontawesome.com/dbad9f8d2b.js" defer crossorigin="anonymous"></script>
     <title>Kontakt | Bonanza | Apartments | Nis</title>
 </head>
@@ -32,7 +31,7 @@
         </nav>
     </header>
     <main>
-        <section class="section hero">
+        <section class="hero">
             <img src="https://meneghetti.hr/_nuxt/assets/img/dining/heroac9e306.jpg" alt="">
             <div class="hero-content">
                 <h1>Veselimo se vasem javljanju!</h1>
