--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
                     <img style="width: 100px; height: 70px;" src="images/logo.jpg" alt="logo">
                 </a>
             </div>
-            <div class="logo-name">
-                <p>BONANZA</p>
-            </div>
             <div class="booking">
                 <div class="language">
                     <a href="#">EN</a>
@@ -27,12 +24,12 @@
                 </div>
                 <div class="booking-section">
                     <a href="https://meneghetti.book-official-website.com/book.php?page=availability&companyid=838&hotelid=4871&checkin=2023-07-30&checkout=2023-07-31&ibelang=hr&crcid=eca91ee8cea07cd497228d2d0aadad5b" class="btn">Rezerviši</a>
-                    <p class="best-rate">Garancija najbolje cene</p>
+                    <p class="best-rate txt-caps">Garancija najbolje cene</p>
                 </div>
             </div>
         </div>
         <nav class="nav-bar">
-            <ul class="nav-menu">
+            <ul class="nav-menu txt-caps">
                 <li><a href="html/apartmani.html">Apartmani</a></li>
                 <li><a href="html/restorani.html">Restorani</a></li>
                 <li><a href="html/galerija.html">Galerija</a></li>
@@ -44,26 +41,26 @@
         <section class="hero">
             <img src="https://meneghetti.hr/_nuxt/assets/img/dining/heroac9e306.jpg" alt="">
         </section>
-        <section class="section about-us">'
+        <section class="section about-us">
             <div class="about">
-                <h1>Bonanza</h1>
-                <h2>Hotel-like apartments</h2>
-                <p>U potrazi za jedinstvenim mjestima potrebno je ponekad skrenuti s glavnog puta. No neka vas glavni putevi dovedu do Istre, do Bala. A zatim usporite i pratite cestu koja se sa svakim kilometrom sve više sužava, dok vam se priroda sve više približava. Usporite još i više te skrenite na bijelu cestu na kraju koje se pred vama otvaraju velika željezna vrata. Stigli ste na Meneghetti. Zatim zastanite bar na trenutak – i uvjerite se da se najbolja mjesta nalaze na sporednim putevima.</p>
+                <h1 class="h1-el-fnt">Bonanza</h1>
+                <h2 class="h2-el-fnt">Hotel-like apartments</h2>
+                <p class="mt fs">U potrazi za jedinstvenim mjestima potrebno je ponekad skrenuti s glavnog puta. No neka vas glavni putevi dovedu do Istre, do Bala. A zatim usporite i pratite cestu koja se sa svakim kilometrom sve više sužava, dok vam se priroda sve više približava. Usporite još i više te skrenite na bijelu cestu na kraju koje se pred vama otvaraju velika željezna vrata. Stigli ste na Meneghetti. Zatim zastanite bar na trenutak – i uvjerite se da se najbolja mjesta nalaze na sporednim putevima.</p>
             </div>
             <div class="mini-gallery">
                 <img src="https://meneghetti.hr/_nuxt/assets/img/masonry113d415a.jpg" alt="">
             </div>
         </section>
         <section class="section gallery">
-            <h1>PRIRODA SUSREĆE LUKSUZ</h1>
-            <h2>ELEGANCIJA DO ZADNJEG DETALJA</h2>`
+            <h1 class="txt-caps h1-el-fnt">Priroda susrece luksuz</h1>
+            <h2 class="txt-caps h2-el-fnt">Elegancija do zadnjeg detalja</h2>
             <div class="section-line"></div>
-            <div class="gallery-holder">
-                <div class="image"><img style="height: 500px; width: 300px;" src="images/image1.jpg" alt="alternative"></div>
-                <div class="image"><img style="height: 500px; width: 300px;" src="images/image2.jpg" alt=""></div>
-                <div class="image"><img style="height: 500px; width: 300px;" src="images/image3.jpg" alt=""></div>
-                <div class="image"><img style="height: 500px; width: 300px;" src="images/image4.jpg" alt=""></div>
-                <div class="image"><img style="height: 500px; width: 300px;" src="images/image5.jpg" alt=""></div>
+            <div class="gallery-container">
+                <div class="image w-two"><img src="images/image7.jpg" alt="alternative"></div>
+                <div class="image w-three"><img src="images/image6.jpg" alt=""></div>
+                <div class="image w-two"><img src="images/image8.jpg" alt=""></div>
+                <div class="image w-one"><img src="images/image9.jpg" alt=""></div>
+                <div class="image w-one"><img src="images/image10.jpg" alt=""></div>
             </div>
         </section>
         <section class="section apartments">
