--- a/index.html
+++ b/index.html
@@ -64,46 +64,48 @@
             </div>
         </section>
         <section class="section apartments">
-            <h1>Apartmani</h1>
-            <h2>UDOBNOST DIZAJNIRANA ZA BEZBRIŽAN ODMOR</h2>
+            <h1 class="h1-el-fnt">Apartmani</h1>
+            <h2 class="h2-el-fnt">UDOBNOST DIZAJNIRANA ZA BEZBRIŽAN ODMOR</h2>
             <div class="section-line"></div>
             <div class="apartments-container">
-                <div class="apartments-container-item">
-                    <a href="#" class="apartment-image">
-                        <img style="height: 500px; width: 300px;" src="images/apartment1.png" alt="">
-                        <div class="apartment-content-overlay">
-                            <p class="apartment-title"></p>
-                            <div class="aparment-content-overlay-hidden">
-                                <p>Za opušten odmor vaše velike obitelji</p>
-                                <p>Pogledaj</p>
+                <div class="container-wraper">
+                    <div class="apartments-container-item">
+                        <a href="#" class="apartment-image">
+                            <img src="images/apartment1.png" alt="">
+                            <div class="apartment-content-overlay">
+                                <p class="apartment-title"></p>
+                                <div class="aparment-content-overlay-hidden">
+                                    <p>Za opušten odmor vaše velike obitelji</p>
+                                    <p>Pogledaj</p>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="apartments-container-item">
-                    <a href="#" class="apartment-image">
-                        <img style="height: 500px; width: 300px;" src="images/apartment1.png" alt="">
-                        <div class="apartment-content-overlay">
-                            <p class="apartment-title"></p>
-                            <div class="aparment-content-overlay-hidden">
-                                <p>Za opušten odmor vaše velike obitelji</p>
-                                <p>Pogledaj</p>
+                        </a>
+                    </div>
+                    <div class="apartments-container-item">
+                        <a href="#" class="apartment-image">
+                            <img src="images/apartment1.png" alt="">
+                            <div class="apartment-content-overlay">
+                                <p class="apartment-title"></p>
+                                <div class="aparment-content-overlay-hidden">
+                                    <p>Za opušten odmor vaše velike obitelji</p>
+                                    <p>Pogledaj</p>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="apartments-container-item">
-                    <a href="#" class="apartment-image">
-                        <img style="height: 500px; width: 300px;" src="images/apartment1.png" alt="">
-                        <div class="apartment-content-overlay">
-                            <p class="apartment-title"></p>
-                            <div class="aparment-content-overlay-hidden">
-                                <p>Za opušten odmor vaše velike obitelji</p>
-                                <p>Pogledaj</p>
+                        </a>
+                    </div>
+                    <div class="apartments-container-item">
+                        <a href="#" class="apartment-image">
+                            <img src="images/apartment1.png" alt="">
+                            <div class="apartment-content-overlay">
+                                <p class="apartment-title"></p>
+                                <div class="aparment-content-overlay-hidden">
+                                    <p>Za opušten odmor vaše velike obitelji</p>
+                                    <p>Pogledaj</p>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                </div>
+                        </a>
+                    </div>
+                </div>  
             </div>
         </section>
     </main>
