css Apartments Section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
     <main>
         <section class="hero">
-            <img src="https://meneghetti.hr/_nuxt/assets/img/dining/heroac9e306.jpg" alt="">
+            <img class="hero-img" src="https://meneghetti.hr/_nuxt/assets/img/dining/heroac9e306.jpg" alt="">
         </section>
         <section class="section about-us">
             <div class="about">
@@ -69,36 +69,36 @@
             <div class="section-line"></div>
             <div class="apartments-container">
                 <div class="container-wraper">
-                    <div class="apartments-container-item">
+                    <div class="apartments-container-item apartment-item">
                         <a href="#" class="apartment-image">
                             <img src="images/apartment1.png" alt="">
-                            <div class="apartment-content-overlay">
-                                <p class="apartment-title"></p>
-                                <div class="aparment-content-overlay-hidden">
+                            <div class="apartment-content-overlay ptb plr">
+                                <p class="apartment-title">Superior</p>
+                                <div class="aparment-content-overlay-hiden">
                                     <p>Za opušten odmor vaše velike obitelji</p>
                                     <p>Pogledaj</p>
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <div class="apartments-container-item">
+                    <div class="apartments-container-item apartment-item">
                         <a href="#" class="apartment-image">
-                            <img src="images/apartment1.png" alt="">
-                            <div class="apartment-content-overlay">
-                                <p class="apartment-title"></p>
-                                <div class="aparment-content-overlay-hidden">
+                            <img src="images/apartment2.png" alt="">
+                            <div class="apartment-content-overlay ptb plr">
+                                <p class="apartment-title">Standard</p>
+                                <div class="aparment-content-overlay-hiden">
                                     <p>Za opušten odmor vaše velike obitelji</p>
                                     <p>Pogledaj</p>
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <div class="apartments-container-item">
+                    <div class="apartments-container-item apartment-item">
                         <a href="#" class="apartment-image">
-                            <img src="images/apartment1.png" alt="">
-                            <div class="apartment-content-overlay">
-                                <p class="apartment-title"></p>
-                                <div class="aparment-content-overlay-hidden">
+                            <img src="images/apartment3.png" alt="">
+                            <div class="apartment-content-overlay ptb plr">
+                                <p class="apartment-title">Studio</p>
+                                <div class="aparment-content-overlay-hiden">
                                     <p>Za opušten odmor vaše velike obitelji</p>
                                     <p>Pogledaj</p>
                                 </div>
