--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
         <nav class="nav-bar">
-            <ul class="nav-menu txt-caps">
+            <ul class="nav-menu txt-caps fnt-w-l">
                 <li><a href="html/apartmani.html">Apartmani</a></li>
                 <li><a href="html/restorani.html">Restorani</a></li>
                 <li><a href="html/galerija.html">Galerija</a></li>
@@ -45,7 +45,7 @@
             <div class="about">
                 <h1 class="h1-el-fnt">Bonanza</h1>
                 <h2 class="h2-el-fnt">Hotel-like apartments</h2>
-                <p class="mt fs">U potrazi za jedinstvenim mjestima potrebno je ponekad skrenuti s glavnog puta. No neka vas glavni putevi dovedu do Istre, do Bala. A zatim usporite i pratite cestu koja se sa svakim kilometrom sve više sužava, dok vam se priroda sve više približava. Usporite još i više te skrenite na bijelu cestu na kraju koje se pred vama otvaraju velika željezna vrata. Stigli ste na Meneghetti. Zatim zastanite bar na trenutak – i uvjerite se da se najbolja mjesta nalaze na sporednim putevima.</p>
+                <p class="mt fs fnt-w-l">U potrazi za jedinstvenim mjestima potrebno je ponekad skrenuti s glavnog puta. No neka vas glavni putevi dovedu do Istre, do Bala. A zatim usporite i pratite cestu koja se sa svakim kilometrom sve više sužava, dok vam se priroda sve više približava. Usporite još i više te skrenite na bijelu cestu na kraju koje se pred vama otvaraju velika željezna vrata. Stigli ste na Meneghetti. Zatim zastanite bar na trenutak – i uvjerite se da se najbolja mjesta nalaze na sporednim putevima.</p>
             </div>
             <div class="mini-gallery">
                 <img src="https://meneghetti.hr/_nuxt/assets/img/masonry113d415a.jpg" alt="">
@@ -112,9 +112,9 @@
         <footer>
             <div class="footer-top">
                 <div class="footer-top-left">
-                    <p>OSTANIMO U KONTAKTU</p>
-                    <p>PODIJELITE SVOJE MENEGHETTI ISKUSTVO</p>
-                    <div class="social-networks">
+                    <p class="fnt-w-b">OSTANIMO U KONTAKTU</p>
+                    <p class="mt">PODIJELITE SVOJE MENEGHETTI ISKUSTVO</p>
+                    <div class="social-networks mt">
                         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#"><i class="fa-brands fa-instagram"></i></a>
                         <a href="#"><i class="fa-brands fa-youtube"></i></a>
@@ -123,11 +123,11 @@
                 <div class="footer-top-right">
                     <div class="line"></div>
                     <div class="email-form">
-                        <p>PRIDRUŽITE SE KLUBU MENEGHETTI</p>
-                        <p>PRIMITE NAŠE NAJBOLJE PONUDE I UŽIVAJTE U POVLAŠTENIM CIJENAMA!</p>
+                        <p class="fnt-w-b">PRIDRUŽITE SE KLUBU MENEGHETTI</p>
+                        <p class="mt">PRIMITE NAŠE NAJBOLJE PONUDE I UŽIVAJTE U POVLAŠTENIM CIJENAMA!</p>
                         <form action="post" target="_blank">
-                            <input type="text" placeholder="Email">
-                            <button type="submit" class="btn">Pridruzi se klubu!</button>
+                            <input class="mt" type="text" placeholder="Email">
+                            <button type="submit" class="btn mt">Pridruzi se klubu!</button>
                         </form>
                     </div>
                 </div>
