--- a/html/kontakt.html
+++ b/html/kontakt.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
+    <link rel="icon" href="../images/logo.jpg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/dbad9f8d2b.js" defer crossorigin="anonymous"></script>
     <title>Kontakt | Bonanza | Apartments | Nis</title>
 </head>
