--- a/html/galerija.html
+++ b/html/galerija.html
@@ -9,16 +9,13 @@
     <title>Galerija | Bonanza | Apartments | Nis</title>
 </head>
 <body>
-    <header>
+    <header id="header">
         <div class="header-gradient"></div>
         <div class="upper-header">
             <div class="logo">
                 <a href="../index.html" class="logo">
                     <img style="width: 100px; height: 70px;" src="../images/logo.jpg" alt="logo">
                 </a>
-            </div>
-            <div class="logo-name">
-                <p>BONANZA</p>
             </div>
             <div class="booking">
                 <div class="language">
@@ -27,23 +24,23 @@
                     <a href="#" style="color:#b99b55">RS</a>
                 </div>
                 <div class="booking-section">
-                    <a href="https://meneghetti.book-official-website.com/book.php?page=availability&companyid=838&hotelid=4871&checkin=2023-07-30&checkout=2023-07-31&ibelang=hr&crcid=eca91ee8cea07cd497228d2d0aadad5b" class="btn">Rezerviši</a>
-                    <p class="best-rate">Garancija najbolje cene</p>
+                    <a href="https://meneghetti.book-official-website.com/book.php?page=availability&companyid=838&hotelid=4871&checkin=2023-07-30&checkout=2023-07-31&ibelang=hr&crcid=eca91ee8cea07cd497228d2d0aadad5b" class="btn">Rezervisi</a>
+                    <p class="best-rate txt-caps">Garancija najbolje cene</p>
                 </div>
             </div>
         </div>
         <nav class="nav-bar">
-            <ul class="nav-menu">
+            <ul class="nav-menu txt-caps fnt-w-l">
                 <li><a href="apartmani.html">Apartmani</a></li>
                 <li><a href="restorani.html">Restorani</a></li>
-                <li><a href="#">Galerija</a></li>
+                <li><a href="">Galerija</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section class="hero">
-            <img src="https://meneghetti.hr/_nuxt/assets/img/dining/heroac9e306.jpg" alt="">
+            <img class="hero-img" src="https://meneghetti.hr/_nuxt/assets/img/dining/heroac9e306.jpg" alt="">
         </section>
         <section class="section apartments">
             <div class="apartments-container">
