--- a/html/restorani.html
+++ b/html/restorani.html
@@ -10,30 +10,37 @@
 </head>
 <body>
     <header id="header">
+        <div class="header-gradient"></div>
         <div class="upper-header">
-            <div class="logo"></div>
+            <div class="logo">
+                <a href="../index.html" class="logo">
+                    <img style="width: 100px; height: 70px;" src="../images/logo.jpg" alt="logo">
+                </a>
+            </div>
             <div class="booking">
                 <div class="language">
-                    <p>EN / RS</p>
+                    <a href="#">EN</a>
+                    <span>/</span>
+                    <a href="#" style="color:#b99b55">RS</a>
                 </div>
                 <div class="booking-section">
-                    <a href="https://meneghetti.book-official-website.com/book.php?page=availability&companyid=838&hotelid=4871&checkin=2023-07-30&checkout=2023-07-31&ibelang=hr&crcid=eca91ee8cea07cd497228d2d0aadad5b" class="btn">Rezervisi</a>
-                    <p>GARANCIJA NAJBOLJE CENE</p>
+                    <a href="https://meneghetti.book-official-website.com/book.php?page=availability&companyid=838&hotelid=4871&checkin=2023-07-30&checkout=2023-07-31&ibelang=hr&crcid=eca91ee8cea07cd497228d2d0aadad5b" class="btn">Rezerviši</a>
+                    <p class="best-rate txt-caps">Garancija najbolje cene</p>
                 </div>
             </div>
         </div>
         <nav class="nav-bar">
-            <ul class="nav-menu">
+            <ul class="nav-menu txt-caps fnt-w-l">
                 <li><a href="apartmani.html">Apartmani</a></li>
-                <li><a href="#">Restorani</a></li>
+                <li><a href="">Restorani</a></li>
                 <li><a href="galerija.html">Galerija</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="section hero">
-            <img src="https://meneghetti.hr/_nuxt/assets/img/dining/heroac9e306.jpg" alt="">
+        <section class="hero">
+            <img class="hero-img" src="https://meneghetti.hr/_nuxt/assets/img/dining/heroac9e306.jpg" alt="">
         </section>
         <section class="restaurants">
             <div class="restaurants-content">
